--- a/forms.html
+++ b/forms.html
@@ -22,27 +22,32 @@
   <input type="text" id="txtTelefone" placeholder="Telefone">
   <input type="email" id="txtEmail" placeholder="Email">
 
+  <button onclick="incluirCliente()">Incluir Cliente</button>
+  <button onclick="alterarCliente()">Alterar Cliente</button>
+
   <script>
-    // Simulação de banco de dados local
-    const clientes = [
-      { id: 1, nome: "João Silva", endereco: "Rua A", telefone: "123456", email: "joao@gmail.com" },
-      { id: 2, nome: "Maria Oliveira", endereco: "Rua B", telefone: "654321", email: "maria@gmail.com" }
-    ];
+    // Inicialização
+    if (!localStorage.getItem("clientes")) {
+      const clientesIniciais = [
+        { id: 1, nome: "João Silva", endereco: "Rua A", telefone: "123456", email: "joao@gmail.com" },
+        { id: 2, nome: "Maria Oliveira", endereco: "Rua B", telefone: "654321", email: "maria@gmail.com" }
+      ];
+      localStorage.setItem("clientes", JSON.stringify(clientesIniciais));
+    }
 
-    // Salvar no localStorage
-    localStorage.setItem("clientes", JSON.stringify(clientes));
-
-    // Preencher lista de clientes
+    let listaClientes = JSON.parse(localStorage.getItem("clientes"));
     const listBox = document.getElementById("listBoxClientes");
-    const listaClientes = JSON.parse(localStorage.getItem("clientes"));
-    listaClientes.forEach(cliente => {
-      const option = document.createElement("option");
-      option.value = cliente.id;
-      option.textContent = `${cliente.id} - ${cliente.nome}`;
-      listBox.appendChild(option);
-    });
 
-    // Buscar cliente e preencher formulário
+    function atualizarLista() {
+      listBox.innerHTML = "";
+      listaClientes.forEach(cliente => {
+        const option = document.createElement("option");
+        option.value = cliente.id;
+        option.textContent = `${cliente.id} - ${cliente.nome}`;
+        listBox.appendChild(option);
+      });
+    }
+
     function buscarCliente() {
       const selectedId = parseInt(listBox.value);
       const cliente = listaClientes.find(c => c.id === selectedId);
@@ -53,6 +58,63 @@
         document.getElementById("txtEmail").value = cliente.email;
       }
     }
+
+    function validarCampos() {
+      const nome = document.getElementById("txtNome").value.trim();
+      const endereco = document.getElementById("txtEndereco").value.trim();
+      const telefone = document.getElementById("txtTelefone").value.trim();
+      const email = document.getElementById("txtEmail").value.trim();
+      return nome && endereco && telefone && email;
+    }
+
+    function incluirCliente() {
+      if (!validarCampos()) {
+        alert("Preencha todos os campos antes de incluir.");
+        return;
+      }
+
+      const novoId = listaClientes.length > 0 ? Math.max(...listaClientes.map(c => c.id)) + 1 : 1;
+      const novoCliente = {
+        id: novoId,
+        nome: document.getElementById("txtNome").value.trim(),
+        endereco: document.getElementById("txtEndereco").value.trim(),
+        telefone: document.getElementById("txtTelefone").value.trim(),
+        email: document.getElementById("txtEmail").value.trim()
+      };
+
+      listaClientes.push(novoCliente);
+      localStorage.setItem("clientes", JSON.stringify(listaClientes));
+      atualizarLista();
+      alert("Cliente incluído com sucesso!");
+    }
+
+    function alterarCliente() {
+      const selectedId = parseInt(listBox.value);
+      if (isNaN(selectedId)) {
+        alert("Selecione um cliente para alterar.");
+        return;
+      }
+
+      if (!validarCampos()) {
+        alert("Preencha todos os campos antes de alterar.");
+        return;
+      }
+
+      const cliente = listaClientes.find(c => c.id === selectedId);
+      if (cliente) {
+        cliente.nome = document.getElementById("txtNome").value.trim();
+        cliente.endereco = document.getElementById("txtEndereco").value.trim();
+        cliente.telefone = document.getElementById("txtTelefone").value.trim();
+        cliente.email = document.getElementById("txtEmail").value.trim();
+
+        localStorage.setItem("clientes", JSON.stringify(listaClientes));
+        atualizarLista();
+        alert("Cliente alterado com sucesso!");
+      }
+    }
+
+    // Inicializa a lista ao carregar
+    atualizarLista();
   </script>
 </body>
 </html>
