--- a/forms.html
+++ b/forms.html
@@ -25,96 +25,117 @@
   <button onclick="incluirCliente()">Incluir Cliente</button>
   <button onclick="alterarCliente()">Alterar Cliente</button>
 
+  <div id="botaoLimparContainer"></div>
+
   <script>
     // Inicialização
     if (!localStorage.getItem("clientes")) {
-      const clientesIniciais = [
+    const clientesIniciais = [
         { id: 1, nome: "João Silva", endereco: "Rua A", telefone: "123456", email: "joao@gmail.com" },
         { id: 2, nome: "Maria Oliveira", endereco: "Rua B", telefone: "654321", email: "maria@gmail.com" }
-      ];
-      localStorage.setItem("clientes", JSON.stringify(clientesIniciais));
+    ];
+    localStorage.setItem("clientes", JSON.stringify(clientesIniciais));
     }
 
-    let listaClientes = JSON.parse(localStorage.getItem("clientes"));
     const listBox = document.getElementById("listBoxClientes");
 
-    function atualizarLista() {
-      listBox.innerHTML = "";
-      listaClientes.forEach(cliente => {
+    function carregarLista() {
+    listBox.innerHTML = "";
+    const listaClientes = JSON.parse(localStorage.getItem("clientes")) || [];
+    listaClientes.forEach(cliente => {
         const option = document.createElement("option");
         option.value = cliente.id;
         option.textContent = `${cliente.id} - ${cliente.nome}`;
         listBox.appendChild(option);
-      });
+    });
     }
 
     function buscarCliente() {
-      const selectedId = parseInt(listBox.value);
-      const cliente = listaClientes.find(c => c.id === selectedId);
-      if (cliente) {
+    const listaClientes = JSON.parse(localStorage.getItem("clientes")) || [];
+    const selectedId = parseInt(listBox.value);
+    const cliente = listaClientes.find(c => c.id === selectedId);
+    if (cliente) {
         document.getElementById("txtNome").value = cliente.nome;
         document.getElementById("txtEndereco").value = cliente.endereco;
         document.getElementById("txtTelefone").value = cliente.telefone;
         document.getElementById("txtEmail").value = cliente.email;
-      }
+    }
     }
 
     function validarCampos() {
-      const nome = document.getElementById("txtNome").value.trim();
-      const endereco = document.getElementById("txtEndereco").value.trim();
-      const telefone = document.getElementById("txtTelefone").value.trim();
-      const email = document.getElementById("txtEmail").value.trim();
-      return nome && endereco && telefone && email;
+    const nome = document.getElementById("txtNome").value.trim();
+    const endereco = document.getElementById("txtEndereco").value.trim();
+    const telefone = document.getElementById("txtTelefone").value.trim();
+    const email = document.getElementById("txtEmail").value.trim();
+    return nome && endereco && telefone && email;
     }
 
     function incluirCliente() {
-      if (!validarCampos()) {
+    if (!validarCampos()) {
         alert("Preencha todos os campos antes de incluir.");
         return;
-      }
+    }
 
-      const novoId = listaClientes.length > 0 ? Math.max(...listaClientes.map(c => c.id)) + 1 : 1;
-      const novoCliente = {
+    const listaClientes = JSON.parse(localStorage.getItem("clientes")) || [];
+    const novoId = listaClientes.length ? Math.max(...listaClientes.map(c => c.id)) + 1 : 1;
+
+    const novoCliente = {
         id: novoId,
         nome: document.getElementById("txtNome").value.trim(),
         endereco: document.getElementById("txtEndereco").value.trim(),
         telefone: document.getElementById("txtTelefone").value.trim(),
         email: document.getElementById("txtEmail").value.trim()
-      };
+    };
 
-      listaClientes.push(novoCliente);
-      localStorage.setItem("clientes", JSON.stringify(listaClientes));
-      atualizarLista();
-      alert("Cliente incluído com sucesso!");
+    listaClientes.push(novoCliente);
+    localStorage.setItem("clientes", JSON.stringify(listaClientes));
+    carregarLista();
+    limparCampos();
     }
 
     function alterarCliente() {
-      const selectedId = parseInt(listBox.value);
-      if (isNaN(selectedId)) {
+    const selectedId = parseInt(listBox.value);
+    if (isNaN(selectedId)) {
         alert("Selecione um cliente para alterar.");
         return;
-      }
-
-      if (!validarCampos()) {
-        alert("Preencha todos os campos antes de alterar.");
-        return;
-      }
-
-      const cliente = listaClientes.find(c => c.id === selectedId);
-      if (cliente) {
-        cliente.nome = document.getElementById("txtNome").value.trim();
-        cliente.endereco = document.getElementById("txtEndereco").value.trim();
-        cliente.telefone = document.getElementById("txtTelefone").value.trim();
-        cliente.email = document.getElementById("txtEmail").value.trim();
-
-        localStorage.setItem("clientes", JSON.stringify(listaClientes));
-        atualizarLista();
-        alert("Cliente alterado com sucesso!");
-      }
     }
 
-    // Inicializa a lista ao carregar
-    atualizarLista();
+    if (!validarCampos()) {
+        alert("Preencha todos os campos antes de alterar.");
+        return;
+    }
+
+    const listaClientes = JSON.parse(localStorage.getItem("clientes")) || [];
+    const clienteIndex = listaClientes.findIndex(c => c.id === selectedId);
+    if (clienteIndex !== -1) {
+        listaClientes[clienteIndex] = {
+        id: selectedId,
+        nome: document.getElementById("txtNome").value.trim(),
+        endereco: document.getElementById("txtEndereco").value.trim(),
+        telefone: document.getElementById("txtTelefone").value.trim(),
+        email: document.getElementById("txtEmail").value.trim()
+        };
+        localStorage.setItem("clientes", JSON.stringify(listaClientes));
+        carregarLista();
+        limparCampos();
+    }
+    }
+
+    function limparCampos() {
+    document.getElementById("txtNome").value = "";
+    document.getElementById("txtEndereco").value = "";
+    document.getElementById("txtTelefone").value = "";
+    document.getElementById("txtEmail").value = "";
+    }
+
+    // Criar botão "Limpar campos" via JavaScript
+    const botaoLimpar = document.createElement("button");
+    botaoLimpar.textContent = "Limpar campos";
+    botaoLimpar.onclick = limparCampos;
+    document.getElementById("botaoLimparContainer").appendChild(botaoLimpar);
+
+    // Carregar lista ao iniciar
+    carregarLista();
   </script>
 </body>
 </html>
